<resources>
    <string name="app_name">Delivered Showcase</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="registered_devices">Registered Devices</string>
    <string name="title_activity_login">Sign in</string>

    <string name="email_address_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="not_registered_text">I don\'t have an account</string>
    <string name="username_hint">Username</string>
    <string name="register_text">Register</string>
    <string name="already_registered_text">I have an account</string>
    <string name="create_an_account_message">Create an account to access all app features</string>

    <string name="main_tab_title_chat_space">Space</string>
    <string name="main_tab_title_friends">Friends</string>
    <string name="main_tab_title_chats">Chats</string>
    <string name="main_tab_title_me">Me</string>
    <string name="main_tab_title_requests">Requests</string>
    <string name="title_activity_public_chat_list">PublicChatListActivity</string>
</resources>
