<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) Delivered Oy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_splash"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Create an account to access all app features"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/dlvrd_grey_400"
            android:textCursorDrawable="@drawable/input_cursor_drawable"
            app:backgroundTint="@android:color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_email_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/dlvrd_grey_400"
            android:textCursorDrawable="@drawable/input_cursor_drawable"
            app:backgroundTint="@android:color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/user_password_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:imeOptions="actionDone"
            android:textColorHint="@color/dlvrd_grey_400"
            android:textCursorDrawable="@drawable/input_cursor_drawable"
            app:backgroundTint="@android:color/white" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register_text"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/existing_account_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_registered_text"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <View
        android:id="@+id/register_background_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DFFFFFF"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>



